--- a/Blink/.vscode/launch.json
+++ b/Blink/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "d:\\ESP_1\\LED_RGB",
+      "cwd": "d:\\ESP_1\\Blink",
       "environment": [],
-      "program": "d:\\ESP_1\\LED_RGB\\build\\Debug\\outDebug",
+      "program": "d:\\ESP_1\\Blink\\build\\Debug\\outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
